# ai-cli

./: Cargo.toml  README.md
cli/: Cargo.toml
cli/src/: call_command.rs  get_gpt_result.rs  gpt_resolver.rs  main.rs
cli/src/config/: load_config_error.rs  load_from_file.rs
cli/src/context/: cwd.rs  env_vars.rs  get_context.rs
cli/src/terminal/: ask_user_confirmation.rs  run_cli_command.rs
core/: Cargo.toml
core/src/: configuration.rs  context.rs  gpt_call.rs  gpt_error.rs  gpt_response.rs  lib.rs  ureq_mock.rs
